# ServicioMonitoreo

./: DEPLOY.md  README.md
Proyecto 1/: MonitoringServiceIOT.pem  docker-compose.yml
Proyecto 1/auth-service/: requirements.txt
Proyecto 1/clients/operator/src/: gui.cpp  main.cpp  network_thread.h
Proyecto 1/clients/sensors/: config.json
Proyecto 1/server/: Dockerfile
Proyecto 1/server/src/: auth_client.h  logger.c  main.c  protocol.h  sensor_manager.h
Proyecto 1/server/web/: index.html
auth-service/: Dockerfile  auth_server.py  users.json
clients/operator/: CMakeLists.txt
clients/operator/src/: gui.h  network_thread.cpp
clients/sensors/: requirements.txt  sensor_simulator.py
docs/: protocolo_iotp.md
infra/: setup_ec2.sh
server/: Makefile
server/src/: auth_client.c  http_handler.c  http_handler.h  logger.h  protocol.c  sensor_manager.c
server/web/: dashboard.html  login.html
